interface Intrusion extends Anomaly {
    getIntrusionObject(): ObjectClass;
}
