export enum ObjectClass {
  PERSON = 'person',
  BICYCLE = 'bicycle',
  CAR = 'car',
  MOTORBIKE = 'motorbike',
  AEROPLANE = 'aeroplane',
  BUS = 'bus',
  TRAIN = 'train',
  TRUCK = 'truck',
  BOAT = 'boat',
  TRAFFIC_LIGHT = 'traffic_light',
  FIRE_HYDRANT = 'fire_hydrant',
  STOP_SIGN = 'stop_sign',
  PARKING_METER = 'parking_meter',
  BENCH = 'bench',
  BIRD = 'bird',
  CAT = 'cat',
  DOG = 'dog',
  HORSE = 'horse',
  SHEEP = 'sheep',
  COW = 'cow',
  ELEPHANT = 'elephant',
  BEAR = 'bear',
  ZEBRA = 'zebra',
  GIRAFFE = 'giraffe',
  BACKPACK = 'backpack',
  UMBRELLA = 'umbrella',
  HANDBAG = 'handbag',
  TIE = 'tie',
  SUITCASE = 'suitcase',
  FRISBEE = 'frisbee',
  SKIS = 'skis',
  SNOWBOARD = 'snowboard',
  SPORTS_BALL = 'sports_ball',
  KITE = 'kite',
  BASEBALL_BAT = 'baseball_bat',
  BASEBALL_GLOVE = 'baseball_glove',
  SKATEBOARD = 'skateboard',
  SURFBOARD = 'surfboard',
  TENNIS_RACKET = 'tennis_racket',
  BOTTLE = 'bottle',
  WINE_GLASS = 'wine_glass',
  CUP = 'cup',
  FORK = 'fork',
  KNIFE = 'knife',
  SPOON = 'spoon',
  BOWL = 'bowl',
  BANANA = 'banana',
  APPLE = 'apple',
  SANDWICH = 'sandwich',
  ORANGE = 'orange',
  BROCCOLI = 'broccoli',
  CARROT = 'carrot',
  HOT_DOG = 'hot_dog',
  PIZZA = 'pizza',
  DONUT = 'donut',
  CAKE = 'cake',
  CHAIR = 'chair',
  SOFA = 'sofa',
  POTTEDPLANT = 'pottedplant',
  BED = 'bed',
  DININGTABLE = 'diningtable',
  TOILET = 'toilet',
  TVMONITOR = 'tvmonitor',
  LAPTOP = 'laptop',
  MOUSE = 'mouse',
  REMOTE = 'remote',
  KEYBOARD = 'keyboard',
  CELL_PHONE = 'cell_phone',
  MICROWAVE = 'microwave',
  OVEN = 'oven',
  TOASTER = 'toaster',
  SINK = 'sink',
  REFRIGERATOR = 'refrigerator',
  BOOK = 'book',
  CLOCK = 'clock',
  VASE = 'vase',
  SCISSORS = 'scissors',
  TEDDY_BEAR = 'teddy_bear',
  HAIR_DRIER = 'hair_drier',
  TOOTHBRUSH = 'toothbrush'
}
