export interface Notification {
  //TODO
}